--- a/clusters/my-cluster/starboard-system/starboard-sync.yaml
+++ b/clusters/my-cluster/starboard-system/starboard-sync.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: starboard-operator
-  namespace: flux-system
+  namespace: starboard-system
 spec:
   interval: 1m0s
   url: https://aquasecurity.github.io/helm-charts
@@ -19,5 +19,5 @@ spec:
   sourceRef:
     kind: HelmRepository
     name: starboard-operator
-    namespace: flux-system
+    namespace: starboard-system
   version: 0.10.3
